--- a/src/app/pages/admin-page/admin-page.component.html
+++ b/src/app/pages/admin-page/admin-page.component.html
@@ -4,8 +4,8 @@
     <app-pokemon-form></app-pokemon-form>
     <h4 class="mt-4">Accounts</h4>
     <app-account-form></app-account-form>
-    <h4 class="mt-4">Items</h4>
-    <app-item-form></app-item-form>
+    <h4 class="mt-4">Item Types</h4>
+    <app-item-type-form></app-item-type-form>
     <h4 class="mt-4">Others</h4>
     <app-npc-form></app-npc-form>
     <app-map-form></app-map-form>
