--- a/src/app/components/battle/battle-gym-leader/battle-gym-leader.component.html
+++ b/src/app/components/battle/battle-gym-leader/battle-gym-leader.component.html
@@ -3,9 +3,9 @@
   <table class="table table-striped table-sm">
     <thead>
       <tr>
-        <th width="40%">Gym Leader Name</th>
-        <th width="30%">Reward</th>
-        <th width="30%"></th>
+        <th width="30%">Gym Leader Name</th>
+        <th width="20%">Reward</th>
+        <th width="40%"></th>
       </tr>
     </thead>
     <tbody>
@@ -13,6 +13,7 @@
         *ngFor="let gymLeader of currentGymLeaders"
         app-gym-leader-item
         [gymLeader]="gymLeader"
+        [currentPokemon]="currentPokemon"
         (win)="battleGymLeader($event, gymLeader)"
       ></tr>
     </tbody>
