Changes to forms and account with all item types now display name of account correctly

--- a/src/app/components/account-new-form/account-new-form.component.html
+++ b/src/app/components/account-new-form/account-new-form.component.html
@@ -43,7 +43,7 @@
       </span>
     </div>
     <input #charNameInput type="text" name="character-name" class="form-control" required
-      [(ngModel)]="account.characterName" placeholder="Character Name" />
+      [(ngModel)]="account.name" placeholder="Character Name" />
   </div>
 </div>
 <div class="form-group">
