--- a/src/app/pages/log-activity-page/log-activity-page.component.html
+++ b/src/app/pages/log-activity-page/log-activity-page.component.html
@@ -130,7 +130,7 @@
     </div>
   </div>
   <div class="col-6">
-    <h4>Pokemon Caught for All Accounts</h4>
+    <h4>Accounts with Higher than Average Pokemon Caught</h4>
     <div class="table-container">
       <table class="table table-striped table-sm">
         <thead>
