--- a/src/app/components/npc-form/npc-form.component.html
+++ b/src/app/components/npc-form/npc-form.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-4">
-      <button type="submit" class="btn btn-secondary">Update</button>
+      <button type="submit" class="btn btn-secondary" [disabled]="updateRewardForm.invalid">Update</button>
     </div>
   </div>
 </form>
