Remove multi quantity purchase in pokemart and finished sell log

--- a/src/app/components/pokemart/pokemart.component.html
+++ b/src/app/components/pokemart/pokemart.component.html
@@ -6,7 +6,7 @@
         <tr>
           <th width="40%">Item Name</th>
           <th width="20%">Cost</th>
-          <th width="20%">Quantity</th>
+          <!-- <th width="20%">Quantity</th> -->
           <th width="20%"></th>
         </tr>
       </thead>
