--- a/src/app/pages/log-activity-page/log-activity-page.component.html
+++ b/src/app/pages/log-activity-page/log-activity-page.component.html
@@ -16,7 +16,7 @@
             <td>{{ mal.id }}</td>
             <td>{{ mal.playableid }}</td>
             <td>{{ mal.mapname }}</td>
-            <td>{{ mal.happenedat | date: 'short' }}</td>
+            <td>{{ mal.happenedat | date: 'mediumDate' }}</td>
           </tr>
         </tbody>
       </table>
@@ -35,7 +35,7 @@
           <tr *ngFor="let hl of healLogs">
             <td>{{ hl.buildingid }}</td>
             <td>{{ hl.playableid }}</td>
-            <td>{{ hl.happenedat | date: 'short' }}</td>
+            <td>{{ hl.happenedat | date: 'mediumDate' }}</td>
           </tr>
         </tbody>
       </table>
@@ -56,7 +56,7 @@
             <td>{{ cl.playableid }}</td>
             <td>{{ cl.pokemonid }}</td>
             <td>{{ cl.itemid }}</td>
-            <td>{{ cl.happenedat | date: 'short' }}</td>
+            <td>{{ cl.happenedat | date: 'mediumDate' }}</td>
           </tr>
         </tbody>
       </table>
@@ -77,7 +77,7 @@
             <td>{{ ul.playableid }}</td>
             <td>{{ ul.pokemonid }}</td>
             <td>{{ ul.itemid }}</td>
-            <td>{{ ul.happenedat | date: 'short' }}</td>
+            <td>{{ ul.happenedat | date: 'mediumDate' }}</td>
           </tr>
         </tbody>
       </table>
@@ -98,7 +98,7 @@
             <td>{{ bl.id }}</td>
             <td>{{ bl.playableid }}</td>
             <td>{{ bl.nonplayableid }}</td>
-            <td>{{ bl.happenedat | date: 'short' }}</td>
+            <td>{{ bl.happenedat | date: 'mediumDate' }}</td>
           </tr>
         </tbody>
       </table>
@@ -121,7 +121,7 @@
             <td>{{ sl.itemid }}</td>
             <td>{{ sl.buildingid }}</td>
             <td>{{ sl.playableid }}</td>
-            <td>{{ sl.happenedat | date: 'short' }}</td>
+            <td>{{ sl.happenedat | date: 'mediumDate' }}</td>
           </tr>
         </tbody>
       </table>
