--- a/src/app/components/account-form/account-form.component.html
+++ b/src/app/components/account-form/account-form.component.html
@@ -53,7 +53,7 @@
     </div>
   </div>
 </form> -->
-<label>Add item(s) to account</label>
+<label>Add item to account</label>
 <form #addItemForm="ngForm" (ngSubmit)="addItem()">
   <div class="row">
     <div class="col-4">
@@ -77,17 +77,6 @@
           required
           [(ngModel)]="accountInfo.addItemAccId"
           placeholder="Account ID"
-        />
-      </div>
-      <div class="input-group mb-3">
-        <input
-          #itemQuantityInput
-          type="text"
-          name="itemQuantity"
-          class="form-control"
-          required
-          [(ngModel)]="accountInfo.itemQuantity"
-          placeholder="Quantity"
         />
       </div>
     </div>
